# NH48

./: .gitignore  README.md  manage.py  pyproject.toml
authentication/: forms.py  views.py
nh48/: asgi.py  secret_key.py  settings.py  urls.py  wsgi.py
nh48_app/: admin.py  apps.py  forms.py  models.py  views.py
nh48_app/migrations/: 0001_initial.py  0002_auto_20210118_0712.py
nh48_user/: admin.py  apps.py  models.py  views.py
nh48_user/migrations/: 0001_initial.py
templates/: base.html  generic_form.html  index.html  member_profile.html  navbar  post_detail.html
