[tool.poetry]
name = "nh48"
version = "0.1.0"
description = ""
authors = ["Jessica Benson <pokeyjess72@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.5"
Pillow = "^8.1.0"
django-cleanup = "^5.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
